// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MsgLocalizationForm > inits > inits with initial values 1`] = `ShallowWrapper {}`;

exports[`MsgLocalizationForm > render > should render 1`] = `ShallowWrapper {}`;

exports[`MsgLocalizationForm > updates > should ignore empty quick replies 1`] = `
{
  "attachments": [],
  "audio": {
    "value": null,
  },
  "message": {
    "value": "",
  },
  "quickReplies": {
    "validationFailures": [],
    "value": [],
  },
  "templateVariables": [],
  "templating": null,
  "valid": true,
}
`;

exports[`MsgLocalizationForm > updates > should ignore empty quick replies 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "spa",
      [
        {
          "translations": {
            "attachments": [],
          },
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`MsgLocalizationForm > updates > should save changes 1`] = `
{
  "attachments": [],
  "audio": {
    "value": null,
  },
  "message": {
    "validationFailures": [],
    "value": "What is your favorite color?",
  },
  "quickReplies": {
    "validationFailures": [],
    "value": [
      "red",
      "green",
      "blue",
    ],
  },
  "templateVariables": [],
  "templating": null,
  "valid": true,
}
`;

exports[`MsgLocalizationForm > updates > should save changes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "spa",
      [
        {
          "translations": {
            "attachments": [],
            "quick_replies": [
              "red",
              "green",
              "blue",
            ],
            "text": "What is your favorite color?",
          },
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
